# libBitbotLimx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/bus/: limx_bus.h
include/device/: limx_AbstractJoint.hpp  limx_device.hpp  limx_imu.h  limx_joint.h
include/kernel/: limx_kernel.hpp
include/limxsdk/: macros.h
src/bus/: limx_bus.cpp
src/device/: limx_imu.cpp  limx_joint.cpp
